--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -13,6 +13,7 @@
   <string name="ACCOUNT_XL">微博账号</string>
   <string name="ADD_EQUIPMENT">带您进入全新的智能家居时代 \n 快来添加设备体验吧！</string>
   <string name="ADD_ERR_INFO">无网络连接\n请点击“返回”主页查看设备状态</string>
+  <string name="ADD_EXISTINGFACE_BEYOND10">最多只能添加10个人脸</string>
   <string name="ADD_FAILED">添加失败，请重试</string>
   <string name="ADD_FAILED_1">添加失败 \n 设备无响应，请确认网络是否可用</string>
   <string name="ADD_SHARE">添加分享</string>
@@ -425,25 +426,25 @@
   <string name="MAGNETISM_ON">打开</string>
   <string name="MAGNETISM_ON_PUSH">%s被打开了</string>
   <string name="MESSAGE">消息中心</string>
-  <string name="MESSAGES_ADD_FACE_TIPS">设置成功后，将存至所勾选面孔的“面孔管理”</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">设置成功后，将存至所勾选人脸的“人脸管理”</string>
   <string name="MESSAGES_AGE">%s岁</string>
   <string name="MESSAGES_BLURRY">模糊</string>
-  <string name="MESSAGES_DELETE_FACE_BTN">仅删除面孔</string>
-  <string name="MESSAGES_DELETE_FACE_MES">删除面孔和消息</string>
-  <string name="MESSAGES_DELETE_FCAE_POP">是否删除面孔？</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">仅删除人脸</string>
+  <string name="MESSAGES_DELETE_FACE_MES">删除人脸和消息</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">是否删除人脸？</string>
   <string name="MESSAGES_DELETE_ICON_BTN">仅删除图标</string>
   <string name="MESSAGES_DELETE_ICON_MES">删除图标和消息</string>
   <string name="MESSAGES_DELETE_ICON_POP">是否删除该图标及其所有消息？</string>
-  <string name="MESSAGES_DELETE_POP">是否删除该面孔及其所有消息？</string>
+  <string name="MESSAGES_DELETE_POP">是否删除该人脸及其所有消息？</string>
   <string name="MESSAGES_EXPLAIN">图片示例：</string>
   <string name="MESSAGES_FACE_ANALYSIS">客流分析</string>
   <string name="MESSAGES_FACE_IDENTIFY">识别</string>
-  <string name="MESSAGES_FACE_INFO">面孔信息</string>
-  <string name="MESSAGES_FACE_MABAGE">面孔管理</string>
-  <string name="MESSAGES_FACE_MOVE">移动到现有面孔</string>
+  <string name="MESSAGES_FACE_INFO">人脸信息</string>
+  <string name="MESSAGES_FACE_MABAGE">人脸管理</string>
+  <string name="MESSAGES_FACE_MOVE">移动到现有人脸</string>
   <string name="MESSAGES_FACE_MOVE_BTN">移动到</string>
   <string name="MESSAGES_FACE_NEW_VISIT">新增来访</string>
-  <string name="MESSAGES_FACE_NONE">暂无面孔</string>
+  <string name="MESSAGES_FACE_NONE">暂无人脸</string>
   <string name="MESSAGES_FACE_PEOPLE">人</string>
   <string name="MESSAGES_FACE_TADAY_VISIT">今日来访</string>
   <string name="MESSAGES_FACE_VISIT_SUM">今日来访 %s 人</string>
@@ -453,9 +454,9 @@
   <string name="MESSAGES_FILTER_STRANGER">访客</string>
   <string name="MESSAGES_GENDER_FEMALE">女</string>
   <string name="MESSAGES_GENDER_MALE">男</string>
-  <string name="MESSAGES_IDENTIFY_ADD_BTN">添加到现有面孔</string>
-  <string name="MESSAGES_IDENTIFY_CREATE_BTN">新建面孔</string>
-  <string name="MESSAGES_IDENTIFY_POP">可通过新建面孔或添加到现有面孔，提高面孔识别的准确率</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">添加到现有人脸</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">注册人脸</string>
+  <string name="MESSAGES_IDENTIFY_POP">可通过注册人脸或添加到现有人脸，提高人脸识别的准确率</string>
   <string name="MESSAGES_POSITIVE_FACE">正脸</string>
   <string name="MESSAGES_REGISTER_FACE">注册人脸</string>
   <string name="MESSAGES_SIDE_FACE">侧脸</string>
@@ -739,6 +740,7 @@
   <string name="STANDARD">正常模式</string>
   <string name="SUBMIT_FAIL">提交失败</string>
   <string name="SUBMIT_LOG">提交错误日志</string>
+  <string name="SUCCESS_REGFACE">成功注册人脸%s</string>
   <string name="SUN">星期日</string>
   <string name="SUN_1">每周日</string>
   <string name="SUN_2">日</string>
