--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -13,6 +13,7 @@
   <string name="ACCOUNT_XL">Weibo</string>
   <string name="ADD_EQUIPMENT">Klicken Sie auf das \"+\" fügen Gerät</string>
   <string name="ADD_ERR_INFO">Bitte \"Zurück\" zur Homepage klicken, den Gerätszustand nachschauen</string>
+  <string name="ADD_EXISTINGFACE_BEYOND10">Fügen Sie nur 10 Gesichter hinzu</string>
   <string name="ADD_FAILED">Fehlgeschlagen hinzugefügt, bitte erneut versuchen</string>
   <string name="ADD_FAILED_1">Sorry, fehlgeschlagen hinzugefügt! Gerät \n reagiert nicht, bitte Internet prüfen</string>
   <string name="ADD_SHARE">Teilen hinzufügen</string>
@@ -454,8 +455,8 @@
   <string name="MESSAGES_GENDER_FEMALE">Weiblich</string>
   <string name="MESSAGES_GENDER_MALE">Männlich</string>
   <string name="MESSAGES_IDENTIFY_ADD_BTN">In dem bestehenden Gesicht</string>
-  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Neues Gesicht</string>
-  <string name="MESSAGES_IDENTIFY_POP">Neues Gesicht oder durch zu einem bestehenden Gesicht Zugabe, verbessert die Genauigkeit der Gesichtserkennung</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Gesicht registrieren</string>
+  <string name="MESSAGES_IDENTIFY_POP">Gesicht registrieren oder durch Hinzufügen zu einem vorhandenen Gesicht die Genauigkeit der Gesichtserkennung verbessern</string>
   <string name="MESSAGES_POSITIVE_FACE">Positives Gesicht</string>
   <string name="MESSAGES_REGISTER_FACE">Gesicht registrieren</string>
   <string name="MESSAGES_SIDE_FACE">Seitenfläche</string>
@@ -739,6 +740,7 @@
   <string name="STANDARD">Normal</string>
   <string name="SUBMIT_FAIL">Abgabe fehlgeschlagen</string>
   <string name="SUBMIT_LOG">Report senden</string>
+  <string name="SUCCESS_REGFACE">Erfolgreich registriertes Gesicht %s</string>
   <string name="SUN">Sonntag</string>
   <string name="SUN_1">Sonntags</string>
   <string name="SUN_2">So</string>
