--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -13,6 +13,7 @@
   <string name="ACCOUNT_XL">Weibo</string>
   <string name="ADD_EQUIPMENT">Cliquer sur \"+\" pour ajouter un appareil</string>
   <string name="ADD_ERR_INFO">Échec de connexion au réseau</string>
+  <string name="ADD_EXISTINGFACE_BEYOND10">Vous ne pouvez ajouter que 10 visages</string>
   <string name="ADD_FAILED">Échec rajout, essayer à nouveau</string>
   <string name="ADD_FAILED_1">Impossible de faire le rajout</string>
   <string name="ADD_SHARE">Partager la connexion</string>
@@ -454,8 +455,8 @@
   <string name="MESSAGES_GENDER_FEMALE">Femelle</string>
   <string name="MESSAGES_GENDER_MALE">Mâle</string>
   <string name="MESSAGES_IDENTIFY_ADD_BTN">Ajouter au visage existant</string>
-  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Nouveau visage</string>
-  <string name="MESSAGES_IDENTIFY_POP">Nouveau visage, ou en ajoutant à un visage existant, améliorer la précision de la reconnaissance faciale</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Enregistrer le visage</string>
+  <string name="MESSAGES_IDENTIFY_POP">Enregistrer le visage, ou en ajoutant à un visage existant, améliorer la précision de la reconnaissance faciale</string>
   <string name="MESSAGES_POSITIVE_FACE">Visage positif</string>
   <string name="MESSAGES_REGISTER_FACE">Enregistrer le visage</string>
   <string name="MESSAGES_SIDE_FACE">De profil</string>
@@ -739,6 +740,7 @@
   <string name="STANDARD">Normal</string>
   <string name="SUBMIT_FAIL">Échec transmission</string>
   <string name="SUBMIT_LOG">Envoyer le journal</string>
+  <string name="SUCCESS_REGFACE">Face enregistrée avec succès %s</string>
   <string name="SUN">Dimanche</string>
   <string name="SUN_1">Tous Les Dimanches</string>
   <string name="SUN_2">Dimanches</string>
