--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -13,6 +13,7 @@
   <string name="ACCOUNT_XL">Weibo</string>
   <string name="ADD_EQUIPMENT">Nhấn nút \"+\" để thêm thiết bị</string>
   <string name="ADD_ERR_INFO">Không thể kết nối mạng</string>
+  <string name="ADD_EXISTINGFACE_BEYOND10">chỉ thêm tối đa 10 khuôn mặt</string>
   <string name="ADD_FAILED">Thêm bị lỗi, hãy thử lại</string>
   <string name="ADD_FAILED_1">Thêm bị lỗi</string>
   <string name="ADD_SHARE">Chia sẻ</string>
@@ -454,8 +455,8 @@
   <string name="MESSAGES_GENDER_FEMALE">Giống cái</string>
   <string name="MESSAGES_GENDER_MALE">Nam giới</string>
   <string name="MESSAGES_IDENTIFY_ADD_BTN">Thêm vào khuôn mặt hiện tại</string>
-  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Gương mặt mới</string>
-  <string name="MESSAGES_IDENTIFY_POP">Khuôn mặt mới, hoặc bằng cách thêm vào khuôn mặt hiện tại, nâng cao độ chính xác của nhận dạng khuôn mặt</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">Đăng ký mặt</string>
+  <string name="MESSAGES_IDENTIFY_POP">Đăng ký mặt, hoặc bằng cách thêm vào khuôn mặt hiện tại, nâng cao độ chính xác của nhận dạng khuôn mặt</string>
   <string name="MESSAGES_POSITIVE_FACE">Mặt tích cực</string>
   <string name="MESSAGES_REGISTER_FACE">Đăng ký mặt</string>
   <string name="MESSAGES_SIDE_FACE">Mặt mặt</string>
@@ -739,6 +740,7 @@
   <string name="STANDARD">Standard</string>
   <string name="SUBMIT_FAIL">Lỗi gửi</string>
   <string name="SUBMIT_LOG">Gửi LOG</string>
+  <string name="SUCCESS_REGFACE">đăng ký thành công khuôn mặt %s</string>
   <string name="SUN">Chủ nhật</string>
   <string name="SUN_1">Chủ nhật</string>
   <string name="SUN_2">CN</string>
