--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -13,6 +13,7 @@
   <string name="ACCOUNT_XL">微博帳號</string>
   <string name="ADD_EQUIPMENT">帶您進入全新的智能家居時代\n快來設備體驗吧！</string>
   <string name="ADD_ERR_INFO">無網路連接\n請點擊“返回”主頁查看設備狀態</string>
+  <string name="ADD_EXISTINGFACE_BEYOND10">最多只能添加10個人臉</string>
   <string name="ADD_FAILED">新增失敗，請重試</string>
   <string name="ADD_FAILED_1">新增失敗\n設備無回應，請確認網路是否可用</string>
   <string name="ADD_SHARE">增加分享</string>
@@ -425,25 +426,25 @@
   <string name="MAGNETISM_ON">打開</string>
   <string name="MAGNETISM_ON_PUSH">%s被打開了</string>
   <string name="MESSAGE">訊息中心</string>
-  <string name="MESSAGES_ADD_FACE_TIPS">設置成功後，將存至所勾選面孔的“面孔管理”</string>
+  <string name="MESSAGES_ADD_FACE_TIPS">設置成功後，將存至所勾選人臉的“人臉管理”</string>
   <string name="MESSAGES_AGE">%s歲</string>
   <string name="MESSAGES_BLURRY">模糊</string>
-  <string name="MESSAGES_DELETE_FACE_BTN">僅刪除面孔</string>
-  <string name="MESSAGES_DELETE_FACE_MES">刪除面孔和消息</string>
-  <string name="MESSAGES_DELETE_FCAE_POP">是否刪除面孔？</string>
+  <string name="MESSAGES_DELETE_FACE_BTN">僅刪除人臉</string>
+  <string name="MESSAGES_DELETE_FACE_MES">刪除人臉和消息</string>
+  <string name="MESSAGES_DELETE_FCAE_POP">是否刪除人臉？</string>
   <string name="MESSAGES_DELETE_ICON_BTN">僅刪除圖標</string>
   <string name="MESSAGES_DELETE_ICON_MES">刪除圖標和消息</string>
   <string name="MESSAGES_DELETE_ICON_POP">是否刪除該圖標及其所有消息？</string>
-  <string name="MESSAGES_DELETE_POP">是否刪除該面孔及其所有消息？</string>
+  <string name="MESSAGES_DELETE_POP">是否刪除該人臉及其所有消息？</string>
   <string name="MESSAGES_EXPLAIN">圖片示例：</string>
   <string name="MESSAGES_FACE_ANALYSIS">客流分析</string>
   <string name="MESSAGES_FACE_IDENTIFY">識別</string>
-  <string name="MESSAGES_FACE_INFO">面孔信息</string>
-  <string name="MESSAGES_FACE_MABAGE">面孔管理</string>
-  <string name="MESSAGES_FACE_MOVE">移動到現有面孔</string>
+  <string name="MESSAGES_FACE_INFO">人臉信息</string>
+  <string name="MESSAGES_FACE_MABAGE">人臉管理</string>
+  <string name="MESSAGES_FACE_MOVE">移動到現有人臉</string>
   <string name="MESSAGES_FACE_MOVE_BTN">移動到</string>
   <string name="MESSAGES_FACE_NEW_VISIT">新增來訪</string>
-  <string name="MESSAGES_FACE_NONE">暫無面孔</string>
+  <string name="MESSAGES_FACE_NONE">暫無人臉</string>
   <string name="MESSAGES_FACE_PEOPLE">人</string>
   <string name="MESSAGES_FACE_TADAY_VISIT">今日來訪</string>
   <string name="MESSAGES_FACE_VISIT_SUM">今日來訪 %s 人</string>
@@ -453,9 +454,9 @@
   <string name="MESSAGES_FILTER_STRANGER">訪客</string>
   <string name="MESSAGES_GENDER_FEMALE">女</string>
   <string name="MESSAGES_GENDER_MALE">男</string>
-  <string name="MESSAGES_IDENTIFY_ADD_BTN">添加到現有面孔</string>
-  <string name="MESSAGES_IDENTIFY_CREATE_BTN">新建面孔</string>
-  <string name="MESSAGES_IDENTIFY_POP">可通過新建面孔或添加到現有面孔，提高面孔識別的準確率</string>
+  <string name="MESSAGES_IDENTIFY_ADD_BTN">添加到現有人臉</string>
+  <string name="MESSAGES_IDENTIFY_CREATE_BTN">註冊人臉</string>
+  <string name="MESSAGES_IDENTIFY_POP">可通過註冊人臉或添加到現有人臉，提高人臉識別的準確率</string>
   <string name="MESSAGES_POSITIVE_FACE">正臉</string>
   <string name="MESSAGES_REGISTER_FACE">註冊人臉</string>
   <string name="MESSAGES_SIDE_FACE">側臉</string>
@@ -739,6 +740,7 @@
   <string name="STANDARD">正常模式</string>
   <string name="SUBMIT_FAIL">提交失敗</string>
   <string name="SUBMIT_LOG">提交錯誤日誌</string>
+  <string name="SUCCESS_REGFACE">成功註冊人臉%s</string>
   <string name="SUN">星期日</string>
   <string name="SUN_1">每週日</string>
   <string name="SUN_2">日</string>
